# curve-launchpad

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
client/: amm.ts  index.ts  utils.ts
docs.rs/solana-address-lookup-table-program/latest/solana_address_lookup_table_program/: index.html
programs/curve-launchpad/: Cargo.toml
programs/curve-launchpad/src/: lib.rs
programs/curve-launchpad/src/amm/: mod.rs
programs/curve-launchpad/src/instructions/: buy.rs  create.rs  errors.rs  initialize.rs  mod.rs  sell.rs  set_params.rs  util.rs  withdraw.rs
programs/curve-launchpad/src/state/: bonding_curve.rs  global.rs  last_withdraw.rs  mod.rs
programs/curve-social/: Cargo.toml
programs/curve-social/src/: lib.rs
programs/curve-social/src/amm/: amm.rs
programs/curve-social/src/instructions/: buy.rs  constants.rs  create.rs  errors.rs  events.rs  initialize.rs  mod.rs  sell.rs  set_params.rs
programs/curve-social/src/state/: bonding_curve.rs  global.rs  mod.rs
tests/: curve-launchpad.ts  curve-social.ts  util.ts
