[package]
name = "curve-launchpad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "curve_launchpad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version="0.30.1", features = ["init-if-needed", "event-cpi"]}
anchor-spl = { version = "0.30.1", features = ["metadata"] }
spl-tlv-account-resolution = "0.6.0"
spl-token-2022 = "3.0.0"
spl-transfer-hook-interface = "0.6.0"
